reorg treatment configurations

--- a/src/main/matlab/local/treatment-011-008.conf
+++ b/src/main/matlab/local/treatment-011-008.conf
@@ -7,7 +7,7 @@ project.name : iterate
 # settings for this treatment
 #
 treatment : {
-	training-set   : "012" # supercluster II (b)
+	training-set   : "011" # supercluster II
 	training-style : "008" # standard
 	cluster-style  : "001"
 	alpha-select   : "000" # LASSO
@@ -37,7 +37,7 @@ chemicals : [
 #   "*" matches all, "**" matches all, recusively
 #
 project : {
-	home          : /mnt/nfs/proj/in-vitro/iterate
+	home          : /data/hnl/iterate
 	training-home : ${project.home}/results_${treatment.training-set}
 	model-home    : ${project.training-home}/model_style_${treatment.training-style}
 	cluster-home  : ${project.model-home}/cluster_style_${treatment.cluster-style}
@@ -103,13 +103,12 @@ sweepOct065-ix: [ 45, 65 ]
 training : {
 	source-spec        : [
 		${project.training-home}/training-A-10Hz-tri/"20*"
-		${project.training-home}/post-surg-10Hz-tri/"20*"
-		${project.training-home}/testing/"20*"
+		${project.training-home}/training-B-97Hz-tri/"20*"
 	]
 	import-path        : [
 		${project.model-home}/training-A-10Hz-tri
-		${project.model-home}/post-surg-10Hz-tri
-		${project.model-home}/testing
+		${project.model-home}/training-B-97Hz-tri
+
 	]
 	result-path           : ${training.import-path}
 	label-catalog-file    : ${project.model-home}/TrainingLabels.csv
@@ -124,14 +123,12 @@ training : {
 	cluster-index-file    : vgramClusterIndex.mat
 	vgram-window          : [
 					${slow-s100-ix}
-					${slow-s100-ix}
-					${slow-s100-ix}
-    ]
+					${fast-s100-ix}
+                                ]
 	time-window           : [
 					${sweep065-ix}
 					${sweep065-ix}
-					${sweep065-ix}
-    ]
+				]
 
 }
 
@@ -146,13 +143,11 @@ testing : {
 	]
 	import-path : [
 		${project.model-home}/training-A-10Hz-tri
-		${project.model-home}/post-surg-10Hz-tri
-		${project.model-home}/testing
+		${project.model-home}/training-B-97Hz-tri
 	]
 	result-path : [
 		${project.mu-home}/training-A-10Hz-tri
-		${project.mu-home}/post-surg-10Hz-tri
-		${project.mu-home}/testing
+		${project.mu-home}/training-B-97Hz-tri
 	]
 	label-catalog-file    : ${project.model-home}/TestingLabels.csv
 	raw-spec              : "*.(abf|h5)"
@@ -167,11 +162,10 @@ testing : {
 	prediction-file       : predictions.mat
 	vgram-window          : [
 					${slow-s100-ix}
-					${slow-s100-ix}
-					${slow-s100-ix}
+					${fast-s100-ix}
+
                                 ]
 	time-window           : [
-					${sweep065-ix}
 					${sweep065-ix}
 					${sweep065-ix}
 				]
@@ -184,7 +178,7 @@ testing : {
 #   the number of result-paths should be either 1 or the number of source-spec paths
 #
 target : {
-	patient-home       : /mnt/nfs/proj/pd/jason/2013
+	patient-home       : /data/hnl/dopamine/analysis
 	source-spec        : ${target.patient-home}/"D*"
 	result-path        : ${target.patient-home}
 	vgram-file         : corrected.mat
