--- a/src/main/matlab/local/treatment-014-008.conf
+++ b/src/main/matlab/local/treatment-014-008.conf
@@ -7,7 +7,7 @@ project.name : iterate
 # settings for this treatment
 #
 treatment : {
-	training-set   : "012" # supercluster II (b)
+	training-set   : "014" # hi/lo amplitude RBE
 	training-style : "008" # standard
 	cluster-style  : "001"
 	alpha-select   : "000" # LASSO
@@ -37,7 +37,7 @@ chemicals : [
 #   "*" matches all, "**" matches all, recusively
 #
 project : {
-	home          : /mnt/nfs/proj/in-vitro/iterate
+	home          : /data/hnl/iterate
 	training-home : ${project.home}/results_${treatment.training-set}
 	model-home    : ${project.training-home}/model_style_${treatment.training-style}
 	cluster-home  : ${project.model-home}/cluster_style_${treatment.cluster-style}
@@ -102,14 +102,21 @@ sweepOct065-ix: [ 45, 65 ]
 #
 training : {
 	source-spec        : [
-		${project.training-home}/training-A-10Hz-tri/"20*"
-		${project.training-home}/post-surg-10Hz-tri/"20*"
-		${project.training-home}/testing/"20*"
+		${project.training-home}/training-A-RBE-97Hz/"20*"
+		${project.training-home}/training-B-RBE025-97Hz/"20*"
+		${project.training-home}/training-C-500kohm-RBE-97Hz/"20*"
+		${project.training-home}/training-D-500kohm-RBE025-97Hz/"20*"
+		${project.training-home}/training-E-BF-solo-155Vs-10Hz/"20*"
+		${project.training-home}/training-F-BF-duet-155Vs-10Hz/"20*"
 	]
 	import-path        : [
-		${project.model-home}/training-A-10Hz-tri
-		${project.model-home}/post-surg-10Hz-tri
-		${project.model-home}/testing
+		${project.model-home}/training-A-RBE-97Hz
+		${project.model-home}/training-B-RBE025-97Hz
+		${project.model-home}/training-C-500kohm-RBE-97Hz
+		${project.model-home}/training-D-500kohm-RBE025-97Hz
+		${project.model-home}/training-E-BF-solo-155Vs-10Hz
+		${project.model-home}/training-F-BF-duet-155Vs-10Hz
+
 	]
 	result-path           : ${training.import-path}
 	label-catalog-file    : ${project.model-home}/TrainingLabels.csv
@@ -123,15 +130,21 @@ training : {
 	characterization-file : characterization.mat
 	cluster-index-file    : vgramClusterIndex.mat
 	vgram-window          : [
-					${slow-s100-ix}
-					${slow-s100-ix}
-					${slow-s100-ix}
-    ]
+					${fast-s100-ix}
+					${fast-s100-ix}
+					${fast-s100-ix}
+					${fast-s100-ix}
+                    ${slow-s100-ix}
+                    ${slow-s100-ix}
+                                ]
 	time-window           : [
+					${sweep103-ix}
+					${sweep065-ix}
+					${sweep103-ix}
 					${sweep065-ix}
 					${sweep065-ix}
 					${sweep065-ix}
-    ]
+				]
 
 }
 
@@ -145,14 +158,20 @@ testing : {
 	source-spec : [
 	]
 	import-path : [
-		${project.model-home}/training-A-10Hz-tri
-		${project.model-home}/post-surg-10Hz-tri
-		${project.model-home}/testing
+		${project.model-home}/training-A-RBE-97Hz
+		${project.model-home}/training-B-RBE025-97Hz
+		${project.model-home}/training-C-500kohm-RBE-97Hz
+		${project.model-home}/training-D-500kohm-RBE025-97Hz
+		${project.model-home}/training-E-BF-solo-155Vs-10Hz
+		${project.model-home}/training-F-BF-duet-155Vs-10Hz
 	]
 	result-path : [
-		${project.mu-home}/training-A-10Hz-tri
-		${project.mu-home}/post-surg-10Hz-tri
-		${project.mu-home}/testing
+		${project.mu-home}/training-A-RBE-97Hz
+		${project.mu-home}/training-B-RBE025-97Hz
+		${project.mu-home}/training-C-500kohm-RBE-97Hz
+		${project.mu-home}/training-D-500kohm-RBE025-97Hz
+		${project.mu-home}/training-E-BF-solo-155Vs-10Hz
+		${project.mu-home}/training-F-BF-duet-155Vs-10Hz
 	]
 	label-catalog-file    : ${project.model-home}/TestingLabels.csv
 	raw-spec              : "*.(abf|h5)"
@@ -166,11 +185,17 @@ testing : {
 	training-data-file    : trainingData.mat
 	prediction-file       : predictions.mat
 	vgram-window          : [
-					${slow-s100-ix}
-					${slow-s100-ix}
-					${slow-s100-ix}
+					${fast-s100-ix}
+					${fast-s100-ix}
+					${fast-s100-ix}
+					${fast-s100-ix}
+                    ${slow-s100-ix}
+                    ${slow-s100-ix}
                                 ]
 	time-window           : [
+					${sweep103-ix}
+					${sweep065-ix}
+					${sweep103-ix}
 					${sweep065-ix}
 					${sweep065-ix}
 					${sweep065-ix}
@@ -184,7 +209,7 @@ testing : {
 #   the number of result-paths should be either 1 or the number of source-spec paths
 #
 target : {
-	patient-home       : /mnt/nfs/proj/pd/jason/2013
+	patient-home       : /data/hnl/pd/toProcess
 	source-spec        : ${target.patient-home}/"D*"
 	result-path        : ${target.patient-home}
 	vgram-file         : corrected.mat
