--- a/src/main/matlab/local/treatment-burst-008-elastic.conf
+++ b/src/main/matlab/local/treatment-burst-008-elastic.conf
@@ -7,10 +7,10 @@ project.name : iterate
 # settings for this treatment
 #
 treatment : {
-	training-set   : "012" # supercluster II (b)
-	training-style : "008" # standard
+	training-set   : "008"
+	training-style : "008"
 	cluster-style  : "001"
-	alpha-select   : "000" # LASSO
+	alpha-select   : "001" # choose best
 	mu-select      : "000" # NONE / SINGLE-MODEL
 	name           : ${treatment.training-set}-${treatment.training-style}-${treatment.cluster-style}-${treatment.alpha-select}-${treatment.mu-select}
 }
@@ -24,9 +24,6 @@ chemicals : [
 	${norepinephrine}
 	${hydroxyindoleaceticacid}
 	${ph}
-    ${kynurenicacid}
-	${acetylcholine}
-	${glutamate}
 ]
 
 #
@@ -37,7 +34,7 @@ chemicals : [
 #   "*" matches all, "**" matches all, recusively
 #
 project : {
-	home          : /mnt/nfs/proj/in-vitro/iterate
+	home          : /data/hnl/iterate
 	training-home : ${project.home}/results_${treatment.training-set}
 	model-home    : ${project.training-home}/model_style_${treatment.training-style}
 	cluster-home  : ${project.model-home}/cluster_style_${treatment.cluster-style}
@@ -102,19 +99,26 @@ sweepOct065-ix: [ 45, 65 ]
 #
 training : {
 	source-spec        : [
-		${project.training-home}/training-A-10Hz-tri/"20*"
-		${project.training-home}/post-surg-10Hz-tri/"20*"
-		${project.training-home}/testing/"20*"
+		${project.training-home}/training-A-0400Vs-010Hz/"20*"
+		${project.training-home}/training-B-0400Vs-097Hz/"20*"
+		${project.training-home}/training-C-RBV001-097Hz/"20*"
+		${project.training-home}/training-E-0400Vs-097Hz/"20*"
+		${project.training-home}/training-F-RBV001-097Hz/"20*"
+		${project.training-home}/training-X-RBV001-097Hz/"20*"
 	]
 	import-path        : [
-		${project.model-home}/training-A-10Hz-tri
-		${project.model-home}/post-surg-10Hz-tri
-		${project.model-home}/testing
+		${project.model-home}/training-A-0400Vs-010Hz
+		${project.model-home}/training-B-0400Vs-097Hz
+		${project.model-home}/training-C-RBV001-097Hz
+		${project.model-home}/training-E-0400Vs-097Hz
+		${project.model-home}/training-F-RBV001-097Hz
+		${project.model-home}/training-X-RBV001-097Hz
+
 	]
 	result-path           : ${training.import-path}
 	label-catalog-file    : ${project.model-home}/TrainingLabels.csv
 	index-cloud-file      : ${project.cluster-home}/indexCloud.mat
-	raw-spec              : "*.(abf|h5)"
+	raw-spec              : "*.abf"
 	label-spec            : "*.csv"
 	vgram-file            : voltammograms.mat
 	metadata-file         : abfMetadata.mat
@@ -124,14 +128,20 @@ training : {
 	cluster-index-file    : vgramClusterIndex.mat
 	vgram-window          : [
 					${slow-s100-ix}
-					${slow-s100-ix}
-					${slow-s100-ix}
-    ]
+					${fast-s100-ix}
+					${fast-s100-ix}
+					${fast-s100-ix}
+					${fast-s100-ix}
+					${fast-s100-ix}
+                                ]
 	time-window           : [
 					${sweep065-ix}
-					${sweep065-ix}
-					${sweep065-ix}
-    ]
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweepOct065-ix}
+				]
 
 }
 
@@ -145,17 +155,23 @@ testing : {
 	source-spec : [
 	]
 	import-path : [
-		${project.model-home}/training-A-10Hz-tri
-		${project.model-home}/post-surg-10Hz-tri
-		${project.model-home}/testing
+		${project.model-home}/training-A-0400Vs-010Hz
+		${project.model-home}/training-B-0400Vs-097Hz
+		${project.model-home}/training-C-RBV001-097Hz
+		${project.model-home}/training-E-0400Vs-097Hz
+		${project.model-home}/training-F-RBV001-097Hz
+		${project.model-home}/training-X-RBV001-097Hz
 	]
 	result-path : [
-		${project.mu-home}/training-A-10Hz-tri
-		${project.mu-home}/post-surg-10Hz-tri
-		${project.mu-home}/testing
+		${project.mu-home}/training-A-0400Vs-010Hz
+		${project.mu-home}/training-B-0400Vs-097Hz
+		${project.mu-home}/training-C-RBV001-097Hz
+		${project.mu-home}/training-E-0400Vs-097Hz
+		${project.mu-home}/training-F-RBV001-097Hz
+		${project.mu-home}/training-X-RBV001-097Hz
 	]
 	label-catalog-file    : ${project.model-home}/TestingLabels.csv
-	raw-spec              : "*.(abf|h5)"
+	raw-spec              : "*.abf"
 	label-spec            : "*.csv"
 	vgram-file            : voltammograms.mat
 	metadata-file         : abfMetadata.mat
@@ -167,13 +183,20 @@ testing : {
 	prediction-file       : predictions.mat
 	vgram-window          : [
 					${slow-s100-ix}
-					${slow-s100-ix}
-					${slow-s100-ix}
+					${fast-s100-ix}
+					${fast-s100-ix}
+					${fast-s100-ix}
+					${fast-s100-ix}
+					${fast-s100-ix}
+
                                 ]
 	time-window           : [
 					${sweep065-ix}
-					${sweep065-ix}
-					${sweep065-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweepOct065-ix}
 				]
 }
 
@@ -184,8 +207,8 @@ testing : {
 #   the number of result-paths should be either 1 or the number of source-spec paths
 #
 target : {
-	patient-home       : /mnt/nfs/proj/pd/jason/2013
-	source-spec        : ${target.patient-home}/"D*"
+	patient-home       : /data/hnl/dopamine/analysis
+	source-spec        : ${target.patient-home}/"20*"
 	result-path        : ${target.patient-home}
 	vgram-file         : corrected.mat
 	training-data-file : trainingData.mat
@@ -245,35 +268,3 @@ hydroxyindoleaceticacid : {
 		units	: nM
 		neutral	: 0.0
 	}
-
-kynurenicacid : {
-		ix	: 6
-		colName : KYNA
-		name	: KynurenicAcid
-		label	: KYNA
-		prefix	: kyna
-		units	: nM
-		neutral	: 0.0
-	}
-
-acetylcholine : {
-		ix 		: 7
-		colName	: ACh
-		name	: Acetylcholine
-		label	: ACh
-		prefix	: ach
-		units	: nM
-		neutral	: 0.0
-	}
-
-glutamate : {
-		ix		: 8
-		colName	: Glu
-		name	: Glutamate
-		label	: Glu
-		prefix	: glu
-		units	: nM
-		neutral	: 0.0
-	}
-
-
