--- a/src/main/matlab/cluster/treatment-014-008.conf
+++ b/src/main/matlab/cluster/treatment-014-008.conf
@@ -106,12 +106,16 @@ training : {
 		${project.training-home}/training-B-RBE025-97Hz/"20*"
 		${project.training-home}/training-C-500kohm-RBE-97Hz/"20*"
 		${project.training-home}/training-D-500kohm-RBE025-97Hz/"20*"
+		${project.training-home}/training-E-BF-solo-155Vs-10Hz/"20*"
+		${project.training-home}/training-F-BF-duet-155Vs-10Hz/"20*"
 	]
 	import-path        : [
 		${project.model-home}/training-A-RBE-97Hz
 		${project.model-home}/training-B-RBE025-97Hz
 		${project.model-home}/training-C-500kohm-RBE-97Hz
 		${project.model-home}/training-D-500kohm-RBE025-97Hz
+		${project.model-home}/training-E-BF-solo-155Vs-10Hz
+		${project.model-home}/training-F-BF-duet-155Vs-10Hz
 
 	]
 	result-path           : ${training.import-path}
@@ -130,11 +134,15 @@ training : {
 					${fast-s100-ix}
 					${fast-s100-ix}
 					${fast-s100-ix}
+                    ${slow-s100-ix}
+                    ${slow-s100-ix}
                                 ]
 	time-window           : [
 					${sweep103-ix}
 					${sweep065-ix}
 					${sweep103-ix}
+					${sweep065-ix}
+					${sweep065-ix}
 					${sweep065-ix}
 				]
 
@@ -154,12 +162,16 @@ testing : {
 		${project.model-home}/training-B-RBE025-97Hz
 		${project.model-home}/training-C-500kohm-RBE-97Hz
 		${project.model-home}/training-D-500kohm-RBE025-97Hz
+		${project.model-home}/training-E-BF-solo-155Vs-10Hz
+		${project.model-home}/training-F-BF-duet-155Vs-10Hz
 	]
 	result-path : [
 		${project.mu-home}/training-A-RBE-97Hz
 		${project.mu-home}/training-B-RBE025-97Hz
 		${project.mu-home}/training-C-500kohm-RBE-97Hz
 		${project.mu-home}/training-D-500kohm-RBE025-97Hz
+		${project.mu-home}/training-E-BF-solo-155Vs-10Hz
+		${project.mu-home}/training-F-BF-duet-155Vs-10Hz
 	]
 	label-catalog-file    : ${project.model-home}/TestingLabels.csv
 	raw-spec              : "*.(abf|h5)"
@@ -177,12 +189,16 @@ testing : {
 					${fast-s100-ix}
 					${fast-s100-ix}
 					${fast-s100-ix}
+                    ${slow-s100-ix}
+                    ${slow-s100-ix}
                                 ]
 	time-window           : [
-					${sweep065-ix}
 					${sweep103-ix}
 					${sweep065-ix}
 					${sweep103-ix}
+					${sweep065-ix}
+					${sweep065-ix}
+					${sweep065-ix}
 				]
 }
 
