fixed a bug in vgram channel selection -- always extracted channel 1

--- a/src/main/matlab/cluster/treatment-014-008.conf
+++ b/src/main/matlab/cluster/treatment-014-008.conf
@@ -108,6 +108,7 @@ training : {
 		${project.training-home}/training-D-500kohm-RBE025-97Hz/"20*"
 		${project.training-home}/training-E-BF-solo-155Vs-10Hz/"20*"
 		${project.training-home}/training-F-BF-duet-155Vs-10Hz/"20*"
+		${project.training-home}/training-G-MMA-lowamp-10Hz/"20*"
 	]
 	import-path        : [
 		${project.model-home}/training-A-RBE-97Hz
@@ -116,6 +117,7 @@ training : {
 		${project.model-home}/training-D-500kohm-RBE025-97Hz
 		${project.model-home}/training-E-BF-solo-155Vs-10Hz
 		${project.model-home}/training-F-BF-duet-155Vs-10Hz
+		${project.model-home}/training-G-MMA-lowamp-10Hz
 
 	]
 	result-path           : ${training.import-path}
@@ -136,11 +138,13 @@ training : {
 					${fast-s100-ix}
                     ${slow-s100-ix}
                     ${slow-s100-ix}
+                    ${slow-s100-ix}
                                 ]
 	time-window           : [
 					${sweep103-ix}
 					${sweep065-ix}
 					${sweep103-ix}
+					${sweep065-ix}
 					${sweep065-ix}
 					${sweep065-ix}
 					${sweep065-ix}
@@ -164,6 +168,7 @@ testing : {
 		${project.model-home}/training-D-500kohm-RBE025-97Hz
 		${project.model-home}/training-E-BF-solo-155Vs-10Hz
 		${project.model-home}/training-F-BF-duet-155Vs-10Hz
+		${project.model-home}/training-G-MMA-lowamp-10Hz
 	]
 	result-path : [
 		${project.mu-home}/training-A-RBE-97Hz
@@ -172,6 +177,7 @@ testing : {
 		${project.mu-home}/training-D-500kohm-RBE025-97Hz
 		${project.mu-home}/training-E-BF-solo-155Vs-10Hz
 		${project.mu-home}/training-F-BF-duet-155Vs-10Hz
+		${project.mu-home}/training-G-MMA-lowamp-10Hz
 	]
 	label-catalog-file    : ${project.model-home}/TestingLabels.csv
 	raw-spec              : "*.(abf|h5)"
@@ -191,11 +197,13 @@ testing : {
 					${fast-s100-ix}
                     ${slow-s100-ix}
                     ${slow-s100-ix}
+                    ${slow-s100-ix}
                                 ]
 	time-window           : [
 					${sweep103-ix}
 					${sweep065-ix}
 					${sweep103-ix}
+					${sweep065-ix}
 					${sweep065-ix}
 					${sweep065-ix}
 					${sweep065-ix}
